# todo-tex

./: .gitignore  LICENSE  README.md  pyproject.toml  sample.tex  todo-tex  todo-tex.py  todotex.example.toml
todotex/: __main__.py  config.py  interface.py  todotex.py
todotex/tests/: test_config.py  test_interface.py  test_todotex.py
